--- a/accounting/templates/base.html
+++ b/accounting/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-5.0.0-dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
     <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
     <script src="{% static 'js/base.js' %}"></script>
     <title>{% block title %}RichMan{% endblock %}</title>
@@ -20,13 +20,13 @@
         <div class="container" style="height: 120px; padding: 20px 0px;">
             <div class="row" style="height: 100%; padding: 0px;">
                 <!-- Logo -->
-                <div class="col-sm-3  col-7">
+                <div class="col-sm-3  col-9">
                     <img src="{% static 'img/logo.png' %}" width="90%">
                 </div>
 
                 <!-- NabBar -->
-                <div class="col-sm-9 col-5" style="padding: 10px 5px;">
-                    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+                <div class="col-sm-9 col-3" style="padding: 10px 5px;">
+                    <nav id="nav" class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -63,8 +63,8 @@
         {% endblock %}
     </div>
 </body>
+<script src="{% static 'js/bootstrap.js' %}"></script>
 
 </html>
-<script src="{% static 'bootstrap-5.0.0-dist/js/bootstrap.min.js' %}"></script>
 {% block js_script %}
 {% endblock %}
